--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
+@import url('https://use.typekit.net/cys5gbm.css');
+@import url('https://db.onlinewebfonts.com/c/4c4a8b4f494bf44c6891cbd63789c881?family=Budmo+W00+Solid');
+@import url('https://db.onlinewebfonts.com/c/690f1ec2426a50d0d059c20a6d9592e6?family=ScubaWeb-Bold+W03+Regular');
+
+@font-face {
+  font-family: "Budmo W00 Solid";
+  src: url("https://db.onlinewebfonts.com/t/4c4a8b4f494bf44c6891cbd63789c881.eot");
+  src: url("https://db.onlinewebfonts.com/t/4c4a8b4f494bf44c6891cbd63789c881.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/4c4a8b4f494bf44c6891cbd63789c881.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/4c4a8b4f494bf44c6891cbd63789c881.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/4c4a8b4f494bf44c6891cbd63789c881.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/4c4a8b4f494bf44c6891cbd63789c881.svg#Budmo W00 Solid")format("svg");
+}
+
+@font-face {
+  font-family: "ScubaWeb-Bold W03 Regular";
+  src: url("https://db.onlinewebfonts.com/t/690f1ec2426a50d0d059c20a6d9592e6.eot");
+  src: url("https://db.onlinewebfonts.com/t/690f1ec2426a50d0d059c20a6d9592e6.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/690f1ec2426a50d0d059c20a6d9592e6.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/690f1ec2426a50d0d059c20a6d9592e6.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/690f1ec2426a50d0d059c20a6d9592e6.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/690f1ec2426a50d0d059c20a6d9592e6.svg#ScubaWeb-Bold W03 Regular")format("svg");
+}
+
 .App {
   text-align: center;
 }
@@ -7,9 +31,50 @@
   pointer-events: none;
 }
 
+.poppins {
+  font-family: "poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: Stripes;
+  src: url('./assets/Stripes.woff') format('woff');
+}
+
+.octothorpe {
+  font-family: "Stripes", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.budmo {
+  font-family: "Budmo W00 Solid";
+}
+
+.scuba {
+  font-family: "ScubaWeb-Bold W03 Regular";
+}
+
+.modal-title {
+  color: #fff;
+}
+
+.caros {
+  font-family: "Caros Soft Medium";
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+  }
+
+  .bottom {
+    position: "fixed";
+    bottom: 0;
+    width: "100%";
+    z-index: 100
   }
 }
 
@@ -32,6 +97,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
